--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
       });
     </p>
     <p>
-      <b>Note :</b> The ROBO Name you pass to API must be unique and not reused.
+      <b>Note :</b> The ROBO Name you pass to API must be unique for each Robot.
     </p>
 
   </div>
@@ -46,7 +46,7 @@
       });
       </p>
       <p>
-        <b>Note :</b> The ROBO Name you pass to API must be unique and not reused.
+        <b>Note :</b> The ROBO Name you pass to API must be unique for each Robot.
       </p>
   </div>
 </body>
